--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,4 +2,9 @@
 
 body {
     font-family: "Roboto Mono", monospace;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1%;
 }
