--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,3 +8,21 @@ body {
     justify-content: center;
     padding: 1%;
 }
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+a:hover {
+    color: blue;
+}
+
+.header-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 1%;
+}
