--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -25,4 +25,22 @@ a:hover {
     justify-content: center;
     text-align: center;
     padding: 1%;
+    padding-bottom: 3%;
+}
+
+.content-container {
+    border: medium dashed black;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 50%;
+    height: 40%;
+    gap: 25%;
+    padding: 5%;
+}
+
+.player-board, .cpu-board {
+    text-align: center;
+    border: medium dashed red;
+    padding: 2%;
 }
