--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -35,6 +35,7 @@ a:hover {
     width: 60%;
     border: medium dotted black;
     padding: 2%;
+    padding-bottom: 5%;
 }
 
 .board-names-container {
@@ -50,6 +51,26 @@ a:hover {
     grid-template-columns: 2fr 2fr;
     justify-content: space-evenly;
     justify-items: center;
+}
+
+.player-board, .cpu-board {
+    display: grid;
+    grid-gap: 5%;
+    grid-template-columns: repeat(10, 35%);
+    grid-template-rows: repeat(10, 35%);
+    justify-content: space-evenly;
+    justify-items: center;
     align-content: space-evenly;
     align-items: center;
+    padding-bottom: 10%;
+}
+
+.player-board-container, .cpu-board-container {
+    margin-left: -28%;
+}
+
+.cell {
+    border: medium solid black;
+    width: 100%;
+    height: 100%;
 }
