--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -66,11 +66,15 @@ a:hover {
 }
 
 .player-board-container, .cpu-board-container {
-    margin-left: -28%;
+    margin-left: -30%;
 }
 
 .cell {
     border: medium solid black;
     width: 100%;
     height: 100%;
+}
+
+.cell:hover {
+    background-color: blue;
 }
