--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,4 +2,33 @@
 
 body {
     font-family: "Roboto Mono", monospace;
+    display: flex;
+    flex-direction: column;
+    padding: 1%;
+    align-items: center;
+    justify-content: center;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+a:hover {
+    color: blue;
+}
+
+.main-title {
+    display: flex;
+    flex-direction: column;
+    padding: 1%;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 2%;
+}
+
+.content {
+    border: medium solid black;
+    width: 65%;
+    height: 45%;
 }
