Create init function

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -28,11 +28,11 @@ a:hover {
 }
 
 .content {
-    border: medium solid black;
     width: 65vw;
     height: 40vh;
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     padding: 2%;
 }
 
