--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -40,4 +40,8 @@ a:hover {
     border: medium dotted black;
     width: 35%;
     height: 105%;
+    display: flex;
+    flex-direction: column;
+    gap: 5%;
+    align-items: center;
 }
