--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -34,6 +34,7 @@ a:hover {
     justify-content: space-evenly;
     align-items: center;
     padding: 2%;
+    padding-bottom: 3%;
 }
 
 .human, .cpu {
@@ -50,4 +51,18 @@ a:hover {
     border: medium solid black;
     width: 75%;
     height: 75%;
+}
+
+button {
+    font-family: inherit;
+}
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.game-status {
+    padding-bottom: 10%;
 }
