--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -84,5 +84,9 @@ button {
 }
 
 .cell:hover {
-    background-color: blue;
+    background-color: lightblue;
+}
+
+.placed {
+    background-color: blue
 }
