--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -83,9 +83,9 @@ button {
     height: 75%;
 }
 
-.cell:hover {
+/* .cell:hover {
     background-color: lightblue;
-}
+} */
 
 .placed {
     background-color: blue
