Finish intial interface Not really, big messy commit

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -90,3 +90,11 @@ button {
 .placed {
     background-color: blue
 }
+
+.hit {
+    background-color: green;
+}
+
+.miss {
+    background-color: red;
+}
