--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -48,7 +48,7 @@ a:hover {
 }
 
 #player-grid, #cpu-grid {
-    border: medium solid black;
+    /* border: medium solid black; */
     width: 75%;
     height: 75%;
 }
