Remove human, cpu dotted border

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -38,7 +38,7 @@ a:hover {
 }
 
 .human, .cpu {
-    border: medium dotted black;
+    /* border: medium dotted black; */
     width: 35%;
     height: 105%;
     display: flex;
